# gen/go/weewar/v1/models/models.pb.go
@@ -2481,11 +2481,12 @@ type GameState struct {
 	Version int64      `protobuf:"varint,9,opt,name=version,proto3" json:"version,omitempty"`
 	Status  GameStatus `protobuf:"varint,10,opt,name=status,proto3,enum=weewar.v1.GameStatus" json:"status,omitempty"`
 	// Only set after a win has been possible
-	Finished      bool  `protobuf:"varint,11,opt,name=finished,proto3" json:"finished,omitempty"`
-	WinningPlayer int32 `protobuf:"varint,12,opt,name=winning_player,json=winningPlayer,proto3" json:"winning_player,omitempty"`
-	WinningTeam   int32 `protobuf:"varint,13,opt,name=winning_team,json=winningTeam,proto3" json:"winning_team,omitempty"`
-	unknownFields protoimpl.UnknownFields
-	sizeCache     protoimpl.SizeCache
+	Finished           bool  `protobuf:"varint,11,opt,name=finished,proto3" json:"finished,omitempty"`
+	WinningPlayer      int32 `protobuf:"varint,12,opt,name=winning_player,json=winningPlayer,proto3" json:"winning_player,omitempty"`
+	WinningTeam        int32 `protobuf:"varint,13,opt,name=winning_team,json=winningTeam,proto3" json:"winning_team,omitempty"`
+	CurrentGroupNumber int64 `protobuf:"varint,14,opt,name=current_group_number,json=currentGroupNumber,proto3" json:"current_group_number,omitempty"`
+	unknownFields      protoimpl.UnknownFields
+	sizeCache          protoimpl.SizeCache
 }
 
 func (x *GameState) Reset() {
@@ -2595,6 +2596,13 @@ func (x *GameState) GetWinningTeam() int32 {
 	return 0
 }
 
+func (x *GameState) GetCurrentGroupNumber() int64 {
+	if x != nil {
+		return x.CurrentGroupNumber
+	}
+	return 0
+}
+
 // Holds the game's move history (can be used as a replay log)
 type GameMoveHistory struct {
 	state protoimpl.MessageState `protogen:"open.v1"`
@@ -2656,9 +2664,11 @@ type GameMoveGroup struct {
 	// When the moves happened (or were submitted)
 	StartedAt *timestamppb.Timestamp `protobuf:"bytes,2,opt,name=started_at,json=startedAt,proto3" json:"started_at,omitempty"`
 	EndedAt   *timestamppb.Timestamp `protobuf:"bytes,3,opt,name=ended_at,json=endedAt,proto3" json:"ended_at,omitempty"`
+	// Group number within the game - will be monotonically increasing
+	GroupNumber int64 `protobuf:"varint,4,opt,name=group_number,json=groupNumber,proto3" json:"group_number,omitempty"`
 	// *
 	// List of moves to add -
-	Moves         []*GameMove `protobuf:"bytes,4,rep,name=moves,proto3" json:"moves,omitempty"`
+	Moves         []*GameMove `protobuf:"bytes,5,rep,name=moves,proto3" json:"moves,omitempty"`
 	unknownFields protoimpl.UnknownFields
 	sizeCache     protoimpl.SizeCache
 }
@@ -2707,6 +2717,13 @@ func (x *GameMoveGroup) GetEndedAt() *timestamppb.Timestamp {
 	return nil
 }
 
+func (x *GameMoveGroup) GetGroupNumber() int64 {
+	if x != nil {
+		return x.GroupNumber
+	}
+	return 0
+}
+
 func (x *GameMoveGroup) GetMoves() []*GameMove {
 	if x != nil {
 		return x.Moves
@@ -2717,9 +2734,13 @@ func (x *GameMoveGroup) GetMoves() []*GameMove {
 // *
 // Represents a single move which can be one of many actions in the game
 type GameMove struct {
-	state     protoimpl.MessageState `protogen:"open.v1"`
-	Player    int32                  `protobuf:"varint,1,opt,name=player,proto3" json:"player,omitempty"` // The player making the move
-	Timestamp *timestamppb.Timestamp `protobuf:"bytes,2,opt,name=timestamp,proto3" json:"timestamp,omitempty"`
+	state  protoimpl.MessageState `protogen:"open.v1"`
+	Player int32                  `protobuf:"varint,1,opt,name=player,proto3" json:"player,omitempty"` // The player making the move
+	// Generated by the server
+	GroupNumber int64 `protobuf:"varint,2,opt,name=group_number,json=groupNumber,proto3" json:"group_number,omitempty"`
+	// Generated by the server - will be monotonically increasing within the group
+	MoveNumber int64                  `protobuf:"varint,3,opt,name=move_number,json=moveNumber,proto3" json:"move_number,omitempty"`
+	Timestamp  *timestamppb.Timestamp `protobuf:"bytes,4,opt,name=timestamp,proto3" json:"timestamp,omitempty"`
 	// Types that are valid to be assigned to MoveType:
 	//
 	//	*GameMove_MoveUnit
@@ -2729,14 +2750,14 @@ type GameMove struct {
 	MoveType isGameMove_MoveType `protobuf_oneof:"move_type"`
 	// A monotonically increasing and unique (within the game) sequence number for the move
 	// This is generated by the server
-	SequenceNum int64 `protobuf:"varint,8,opt,name=sequence_num,json=sequenceNum,proto3" json:"sequence_num,omitempty"`
+	SequenceNum int64 `protobuf:"varint,9,opt,name=sequence_num,json=sequenceNum,proto3" json:"sequence_num,omitempty"`
 	// Whether the result is permenant and can be undone.
 	// Just moving a unit for example is not permanent, but attacking a unit
 	// would be (ie a player cannot undo it).  This is also determined by the server/validator
-	IsPermanent bool `protobuf:"varint,9,opt,name=is_permanent,json=isPermanent,proto3" json:"is_permanent,omitempty"`
+	IsPermanent bool `protobuf:"varint,10,opt,name=is_permanent,json=isPermanent,proto3" json:"is_permanent,omitempty"`
 	// The corresponding "result" for the move.  This can be "proposed" or can be evaluated.
 	// Keeping this colocated with the Move for consistency and simplicity
-	Changes       []*WorldChange `protobuf:"bytes,10,rep,name=changes,proto3" json:"changes,omitempty"`
+	Changes       []*WorldChange `protobuf:"bytes,11,rep,name=changes,proto3" json:"changes,omitempty"`
 	unknownFields protoimpl.UnknownFields
 	sizeCache     protoimpl.SizeCache
 }
@@ -2774,6 +2795,20 @@ func (*GameMove) Descriptor() ([]byte, []int) {
 func (x *GameMove) GetPlayer() int32 {
 	if x != nil {
 		return x.Player
+	}
+	return 0
+}
+
+func (x *GameMove) GetGroupNumber() int64 {
+	if x != nil {
+		return x.GroupNumber
+	}
+	return 0
+}
+
+func (x *GameMove) GetMoveNumber() int64 {
+	if x != nil {
+		return x.MoveNumber
 	}
 	return 0
 }
@@ -2854,19 +2889,19 @@ type isGameMove_MoveType interface {
 }
 
 type GameMove_MoveUnit struct {
-	MoveUnit *MoveUnitAction `protobuf:"bytes,4,opt,name=move_unit,json=moveUnit,proto3,oneof"`
+	MoveUnit *MoveUnitAction `protobuf:"bytes,5,opt,name=move_unit,json=moveUnit,proto3,oneof"`
 }
 
 type GameMove_AttackUnit struct {
-	AttackUnit *AttackUnitAction `protobuf:"bytes,5,opt,name=attack_unit,json=attackUnit,proto3,oneof"`
+	AttackUnit *AttackUnitAction `protobuf:"bytes,6,opt,name=attack_unit,json=attackUnit,proto3,oneof"`
 }
 
 type GameMove_EndTurn struct {
-	EndTurn *EndTurnAction `protobuf:"bytes,6,opt,name=end_turn,json=endTurn,proto3,oneof"`
+	EndTurn *EndTurnAction `protobuf:"bytes,7,opt,name=end_turn,json=endTurn,proto3,oneof"`
 }
 
 type GameMove_BuildUnit struct {
-	BuildUnit *BuildUnitAction `protobuf:"bytes,7,opt,name=build_unit,json=buildUnit,proto3,oneof"`
+	BuildUnit *BuildUnitAction `protobuf:"bytes,8,opt,name=build_unit,json=buildUnit,proto3,oneof"`
 }
 
 func (*GameMove_MoveUnit) isGameMove_MoveType() {}
@@ -4269,7 +4304,7 @@ const file_weewar_v1_models_models_proto_rawDesc = "" +
 	"\rallowed_units\x18\x01 \x03(\x05R\fallowedUnits\x12&\n" +
 	"\x0fturn_time_limit\x18\x02 \x01(\x05R\rturnTimeLimit\x12\x1b\n" +
 	"\tteam_mode\x18\x03 \x01(\tR\bteamMode\x12\x1b\n" +
-	"\tmax_turns\x18\x04 \x01(\x05R\bmaxTurns\"\xac\x03\n" +
+	"\tmax_turns\x18\x04 \x01(\x05R\bmaxTurns\"\xde\x03\n" +
 	"\tGameState\x129\n" +
 	"\n" +
 	"updated_at\x18\x02 \x01(\v2\x1a.google.protobuf.TimestampR\tupdatedAt\x12\x17\n" +
@@ -4285,28 +4320,33 @@ const file_weewar_v1_models_models_proto_rawDesc = "" +
 	" \x01(\x0e2\x15.weewar.v1.GameStatusR\x06status\x12\x1a\n" +
 	"\bfinished\x18\v \x01(\bR\bfinished\x12%\n" +
 	"\x0ewinning_player\x18\f \x01(\x05R\rwinningPlayer\x12!\n" +
-	"\fwinning_team\x18\r \x01(\x05R\vwinningTeam\"\\\n" +
+	"\fwinning_team\x18\r \x01(\x05R\vwinningTeam\x120\n" +
+	"\x14current_group_number\x18\x0e \x01(\x03R\x12currentGroupNumber\"\\\n" +
 	"\x0fGameMoveHistory\x12\x17\n" +
 	"\agame_id\x18\x01 \x01(\tR\x06gameId\x120\n" +
-	"\x06groups\x18\x02 \x03(\v2\x18.weewar.v1.GameMoveGroupR\x06groups\"\xac\x01\n" +
+	"\x06groups\x18\x02 \x03(\v2\x18.weewar.v1.GameMoveGroupR\x06groups\"\xcf\x01\n" +
 	"\rGameMoveGroup\x129\n" +
 	"\n" +
 	"started_at\x18\x02 \x01(\v2\x1a.google.protobuf.TimestampR\tstartedAt\x125\n" +
-	"\bended_at\x18\x03 \x01(\v2\x1a.google.protobuf.TimestampR\aendedAt\x12)\n" +
-	"\x05moves\x18\x04 \x03(\v2\x13.weewar.v1.GameMoveR\x05moves\"\xcf\x03\n" +
+	"\bended_at\x18\x03 \x01(\v2\x1a.google.protobuf.TimestampR\aendedAt\x12!\n" +
+	"\fgroup_number\x18\x04 \x01(\x03R\vgroupNumber\x12)\n" +
+	"\x05moves\x18\x05 \x03(\v2\x13.weewar.v1.GameMoveR\x05moves\"\x93\x04\n" +
 	"\bGameMove\x12\x16\n" +
-	"\x06player\x18\x01 \x01(\x05R\x06player\x128\n" +
-	"\ttimestamp\x18\x02 \x01(\v2\x1a.google.protobuf.TimestampR\ttimestamp\x128\n" +
-	"\tmove_unit\x18\x04 \x01(\v2\x19.weewar.v1.MoveUnitActionH\x00R\bmoveUnit\x12>\n" +
-	"\vattack_unit\x18\x05 \x01(\v2\x1b.weewar.v1.AttackUnitActionH\x00R\n" +
+	"\x06player\x18\x01 \x01(\x05R\x06player\x12!\n" +
+	"\fgroup_number\x18\x02 \x01(\x03R\vgroupNumber\x12\x1f\n" +
+	"\vmove_number\x18\x03 \x01(\x03R\n" +
+	"moveNumber\x128\n" +
+	"\ttimestamp\x18\x04 \x01(\v2\x1a.google.protobuf.TimestampR\ttimestamp\x128\n" +
+	"\tmove_unit\x18\x05 \x01(\v2\x19.weewar.v1.MoveUnitActionH\x00R\bmoveUnit\x12>\n" +
+	"\vattack_unit\x18\x06 \x01(\v2\x1b.weewar.v1.AttackUnitActionH\x00R\n" +
 	"attackUnit\x125\n" +
-	"\bend_turn\x18\x06 \x01(\v2\x18.weewar.v1.EndTurnActionH\x00R\aendTurn\x12;\n" +
+	"\bend_turn\x18\a \x01(\v2\x18.weewar.v1.EndTurnActionH\x00R\aendTurn\x12;\n" +
 	"\n" +
-	"build_unit\x18\a \x01(\v2\x1a.weewar.v1.BuildUnitActionH\x00R\tbuildUnit\x12!\n" +
-	"\fsequence_num\x18\b \x01(\x03R\vsequenceNum\x12!\n" +
-	"\fis_permanent\x18\t \x01(\bR\visPermanent\x120\n" +
-	"\achanges\x18\n" +
-	" \x03(\v2\x16.weewar.v1.WorldChangeR\achangesB\v\n" +
+	"build_unit\x18\b \x01(\v2\x1a.weewar.v1.BuildUnitActionH\x00R\tbuildUnit\x12!\n" +
+	"\fsequence_num\x18\t \x01(\x03R\vsequenceNum\x12!\n" +
+	"\fis_permanent\x18\n" +
+	" \x01(\bR\visPermanent\x120\n" +
+	"\achanges\x18\v \x03(\v2\x16.weewar.v1.WorldChangeR\achangesB\v\n" +
 	"\tmove_type\"\xc9\x01\n" +
 	"\x0eMoveUnitAction\x12\x15\n" +
 	"\x06from_q\x18\x01 \x01(\x05R\x05fromQ\x12\x15\n" +
