# gen/gorm/models_gorm.go
@@ -371,17 +371,18 @@ type GameWorldDataGORM struct {
 
 // GameStateGORM is the GORM model for weewar.v1.GameState
 type GameStateGORM struct {
-	UpdatedAt     time.Time
-	GameId        string `gorm:"primaryKey"`
-	TurnCounter   int32
-	CurrentPlayer int32
-	WorldData     GameWorldDataGORM `gorm:"embedded;embeddedPrefix:world_data_"`
-	StateHash     string
-	Version       int64
-	Status        models.GameStatus
-	Finished      bool
-	WinningPlayer int32
-	WinningTeam   int32
+	UpdatedAt          time.Time
+	GameId             string `gorm:"primaryKey"`
+	TurnCounter        int32
+	CurrentPlayer      int32
+	WorldData          GameWorldDataGORM `gorm:"embedded;embeddedPrefix:world_data_"`
+	StateHash          string
+	Version            int64
+	Status             models.GameStatus
+	Finished           bool
+	WinningPlayer      int32
+	WinningTeam        int32
+	CurrentGroupNumber int64
 }
 
 // TableName returns the table name for GameStateGORM
@@ -397,18 +398,19 @@ type GameMoveHistoryGORM struct {
 
 // GameMoveGroupGORM is the GORM model for weewar.v1.GameMoveGroup
 type GameMoveGroupGORM struct {
-	StartedAt time.Time
-	EndedAt   time.Time
-	Moves     []GameMoveGORM
+	StartedAt   time.Time
+	EndedAt     time.Time
+	GroupNumber int64
+	Moves       []GameMoveGORM
 }
 
 // GameMoveGORM is the GORM model for weewar.v1.GameMove
 type GameMoveGORM struct {
-	GameId      string `gorm:"primaryKey"`
 	Player      int32
-	Timestamp   time.Time
-	GroupNumber string `gorm:"primaryKey"`
+	GameId      string `gorm:"primaryKey"`
+	GroupNumber int32  `gorm:"primaryKey"`
 	MoveNumber  int32  `gorm:"primaryKey"`
+	Timestamp   time.Time
 	Version     int64
 	MoveType    []byte `gorm:"serializer:json"`
 	SequenceNum int64
