# gen/openapiv2/services.swagger.json
@@ -2275,6 +2275,16 @@
           "format": "int32",
           "title": "The player making the move"
         },
+        "groupNumber": {
+          "type": "string",
+          "format": "int64",
+          "title": "Generated by the server"
+        },
+        "moveNumber": {
+          "type": "string",
+          "format": "int64",
+          "title": "Generated by the server - will be monotonically increasing within the group"
+        },
         "timestamp": {
           "type": "string",
           "format": "date-time"
@@ -2322,6 +2332,11 @@
         "endedAt": {
           "type": "string",
           "format": "date-time"
+        },
+        "groupNumber": {
+          "type": "string",
+          "format": "int64",
+          "title": "Group number within the game - will be monotonically increasing"
         },
         "moves": {
           "type": "array",
@@ -2489,6 +2504,10 @@
         "winningTeam": {
           "type": "integer",
           "format": "int32"
+        },
+        "currentGroupNumber": {
+          "type": "string",
+          "format": "int64"
         }
       },
       "title": "Holds the game's Active/Current state (eg world state)"
